Implements HangmanCmd